Fix navbar layout on mobile phones

--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -61,7 +61,7 @@ footer,
     color: $default-color;
     display: inline-block;
     opacity: .6;
-    padding: 0 2rem 0 0;
+    padding: 0 1.5rem 0 0;
 
     @media (prefers-color-scheme: dark) {
       color: $dark-default-color;
